# mbed-devcontainer-template

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .gitignore  CMakeLists.txt  main.cpp  mbed_app.json
{{cookiecutter.project_slug}}/.devcontainer/: deploy.sh  devcontainer.json
